# rsmpeg

./: .gitignore  Cargo.toml  README-TW.md  README.md  final.md  test.md  todos.md
.design/: art-direction.md  component-inventory.md  template-selection.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-08-rsmpeg-implementation.md
docs/superpowers/specs/: 2026-06-08-rsmpeg-design.md  2026-06-09-egui-gui-design.md
rsmpeg/: Cargo.toml
rsmpeg-cli/: Cargo.toml
rsmpeg-cli/src/: codec_detect.rs  lib.rs  main.rs  playback.rs
rsmpeg-cli/src/gui/: engine.rs  mod.rs  state.rs  ui.rs
rsmpeg-codec/: Cargo.toml
rsmpeg-codec/src/: codec.rs  codec_context.rs  codec_id.rs  codec_impls.rs  codec_parameters.rs  codec_registry.rs  frame.rs  lib.rs  packet.rs  picture_type.rs
rsmpeg-codec/src/codec_impls/: pcm_audio.rs  raw_video.rs
rsmpeg-filter/: Cargo.toml
rsmpeg-filter/src/: blur.rs  buffer.rs  builtin.rs  crop.rs  filter.rs  filter_graph.rs  grayscale.rs  lib.rs  mirror.rs  pad.rs  rotate.rs
rsmpeg-format/: Cargo.toml
rsmpeg-format/src/: duration.rs  format.rs  format_context.rs  format_registry.rs  io_context.rs  lib.rs  probe.rs  stream.rs  time_util.rs
rsmpeg-format/src/demuxers/: avi_demuxer.rs  flac_demuxer.rs  mkv_demuxer.rs  mod.rs  mp4_demuxer.rs  raw_demuxer.rs  wav_demuxer.rs
rsmpeg-player/: Cargo.toml
rsmpeg-player/src/: audio_convert.rs  audio_ring_buffer.rs  clock.rs  command.rs  demux_worker.rs  event.rs  frame_pool.rs  h264_bitstream.rs  lib.rs  native_pipeline.rs  player.rs  queue.rs  scaler_cache.rs  sync.rs  video_convert.rs  video_scheduler.rs
rsmpeg-player/src/backend/: mod.rs  openh264_dec.rs  symphonia_audio.rs
rsmpeg-resample/: Cargo.toml
rsmpeg-resample/src/: channel.rs  channel_mapping.rs  dither.rs  lib.rs  resampler.rs
rsmpeg-scale/: Cargo.toml
rsmpeg-scale/src/: colorspace.rs  lib.rs  scaler.rs
rsmpeg-util/: Cargo.toml
rsmpeg-util/src/: channel_layout.rs  dict.rs  error.rs  lib.rs  media_type.rs  pixel_format.rs  rational.rs  sample_format.rs
rsmpeg/examples/: filter_graph.rs  pipeline.rs  probe_basic.rs  version.rs
rsmpeg/src/: lib.rs
scripts/: build-release.ps1
