[package]
name = "rsmpeg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "rsmpeg command-line tools (probe, transcode, play)"

[lints]
workspace = true

[[bin]]
name = "rsmpeg"
path = "src/main.rs"

[dependencies]
rsmpeg = { path = "../rsmpeg" }
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

# Audio playback: Symphonia (pure-Rust decode) + rodio (audio output)
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "isomp4", "aac", "vorbis", "flac", "mkv", "ogg", "wav", "pcm", "alac", "adpcm",
] }
rodio = "0.20"

# Video playback: OpenH264 (H.264 decode via Cisco's C library) + minifb (window/display)
openh264 = "0.9"
minifb = "0.28"
