[package]
name = "rsmpeg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "rsmpeg command-line tools (probe, transcode, play)"

[lints]
workspace = true

[[bin]]
name = "rsmpeg"
path = "src/main.rs"

[dependencies]
rsmpeg = { path = "../rsmpeg" }
rsmpeg-player = { path = "../rsmpeg-player" }
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

# Legacy CLI `play` window (minifb). Decode/demux live in rsmpeg-player.
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "isomp4", "aac", "vorbis", "flac", "mkv", "ogg", "wav", "pcm", "alac", "adpcm",
] }
rodio = "0.20"
openh264 = "0.9"
minifb = "0.28"

# GUI
eframe = "0.28"
rfd = "0.15"
