[package]
name = "rsmpeg-scale"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Video scaling, pixel format conversion, and color space conversion (libswscale equivalent)"

[lints]
workspace = true

[dependencies]
rsmpeg-util = { path = "../rsmpeg-util" }
rsmpeg-codec = { path = "../rsmpeg-codec" }
tracing.workspace = true
bitflags.workspace = true
