[package]
name = "rsmpeg-util"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core utility types for rsmpeg (libavutil equivalent)"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bitflags.workspace = true
